bindgen-wrapper.conf.d/header-overrides/rte_ethdev.bindgen-can-not.h


struct rte_eth_rxmode {
	enum rte_eth_rx_mq_mode mq_mode;
	uint32_t max_rx_pkt_len;  
	uint16_t split_hdr_size;  
	__extension__
	uint16_t header_split : 1, 
		hw_ip_checksum   : 1, 
		hw_vlan_filter   : 1, 
		hw_vlan_strip    : 1, 
		hw_vlan_extend   : 1, 
		jumbo_frame      : 1, 
		hw_strip_crc     : 1, 
		enable_scatter   : 1, 
		enable_lro       : 1; 
};
enum rte_vlan_type {
	ETH_VLAN_TYPE_UNKNOWN = 0,
	ETH_VLAN_TYPE_INNER, 
	ETH_VLAN_TYPE_OUTER, 
	ETH_VLAN_TYPE_MAX,
};
struct rte_eth_rss_conf {
	uint8_t *rss_key;    
	uint8_t rss_key_len; 
	uint64_t rss_hf;     
};
struct rte_eth_rss_reta_entry64 {
	uint64_t mask;
	uint16_t reta[RTE_RETA_GROUP_SIZE];
};
struct rte_eth_dcb_rx_conf {
	enum rte_eth_nb_tcs nb_tcs; 
	uint8_t dcb_tc[ETH_DCB_NUM_USER_PRIORITIES];
};
struct rte_eth_vmdq_dcb_tx_conf {
	enum rte_eth_nb_pools nb_queue_pools; 
	uint8_t dcb_tc[ETH_DCB_NUM_USER_PRIORITIES];
};
struct rte_eth_dcb_tx_conf {
	enum rte_eth_nb_tcs nb_tcs; 
	uint8_t dcb_tc[ETH_DCB_NUM_USER_PRIORITIES];
};
struct rte_eth_vmdq_tx_conf {
	enum rte_eth_nb_pools nb_queue_pools; 
};
struct rte_eth_vmdq_dcb_conf {
	enum rte_eth_nb_pools nb_queue_pools; 
	uint8_t enable_default_pool; 
	uint8_t default_pool; 
	uint8_t nb_pool_maps; 
	struct {
		uint16_t vlan_id; 
		uint64_t pools;   
	} pool_map[ETH_VMDQ_MAX_VLAN_FILTERS]; 
	uint8_t dcb_tc[ETH_DCB_NUM_USER_PRIORITIES];
};
struct rte_eth_vmdq_rx_conf {
	enum rte_eth_nb_pools nb_queue_pools; 
	uint8_t enable_default_pool; 
	uint8_t default_pool; 
	uint8_t enable_loop_back; 
	uint8_t nb_pool_maps; 
	uint32_t rx_mode; 
	struct {
		uint16_t vlan_id; 
		uint64_t pools;   
	} pool_map[ETH_VMDQ_MAX_VLAN_FILTERS]; 
};
struct rte_eth_txmode {
	enum rte_eth_tx_mq_mode mq_mode; 
	uint16_t pvid;
	__extension__
	uint8_t hw_vlan_reject_tagged : 1,
		hw_vlan_reject_untagged : 1,
		hw_vlan_insert_pvid : 1;
};
struct rte_eth_rxconf {
	struct rte_eth_thresh rx_thresh; 
	uint16_t rx_free_thresh; 
	uint8_t rx_drop_en; 
	uint8_t rx_deferred_start; 
};
struct rte_eth_txconf {
	struct rte_eth_thresh tx_thresh; 
	uint16_t tx_rs_thresh; 
	uint16_t tx_free_thresh; 
	uint32_t txq_flags; 
	uint8_t tx_deferred_start; 
};
struct rte_eth_desc_lim {
	uint16_t nb_max;   
	uint16_t nb_min;   
	uint16_t nb_align; 
};
enum rte_eth_fc_mode {
	RTE_FC_NONE = 0, 
	RTE_FC_RX_PAUSE, 
	RTE_FC_TX_PAUSE, 
	RTE_FC_FULL      
};
struct rte_eth_fc_conf {
	uint32_t high_water;  
	uint32_t low_water;   
	uint16_t pause_time;  
	uint16_t send_xon;    
	enum rte_eth_fc_mode mode;  
	uint8_t mac_ctrl_frame_fwd; 
	uint8_t autoneg;      
};
struct rte_eth_pfc_conf {
	struct rte_eth_fc_conf fc; 
	uint8_t priority;          
};
struct rte_fdir_conf {
	enum rte_fdir_mode mode; 
	enum rte_fdir_pballoc_type pballoc; 
	enum rte_fdir_status_mode status;  
	uint8_t drop_queue;
	struct rte_eth_fdir_masks mask;
	struct rte_eth_fdir_flex_conf flex_conf;
};
struct rte_eth_udp_tunnel {
	uint16_t udp_port; 
	uint8_t prot_type; 
};
struct rte_intr_conf {
	uint16_t lsc;
	uint16_t rxq;
};
struct rte_eth_conf {
	uint32_t link_speeds; 
	struct rte_eth_rxmode rxmode; 
	struct rte_eth_txmode txmode; 
	uint32_t lpbk_mode; 
	struct {
		struct rte_eth_rss_conf rss_conf; 
		struct rte_eth_vmdq_dcb_conf vmdq_dcb_conf;
		struct rte_eth_dcb_rx_conf dcb_rx_conf;
		struct rte_eth_vmdq_rx_conf vmdq_rx_conf;
	} rx_adv_conf; 
	union {
		struct rte_eth_vmdq_dcb_tx_conf vmdq_dcb_tx_conf;
		struct rte_eth_dcb_tx_conf dcb_tx_conf;
		struct rte_eth_vmdq_tx_conf vmdq_tx_conf;
	} tx_adv_conf; 
	uint32_t dcb_capability_en;
	struct rte_fdir_conf fdir_conf; 
	struct rte_intr_conf intr_conf; 
};
struct rte_eth_dev_info {
	struct rte_pci_device *pci_dev; 
	const char *driver_name; 
	unsigned int if_index; 
	uint32_t min_rx_bufsize; 
	uint32_t max_rx_pktlen; 
	uint16_t max_rx_queues; 
	uint16_t max_tx_queues; 
	uint32_t max_mac_addrs; 
	uint32_t max_hash_mac_addrs;
	uint16_t max_vfs; 
	uint16_t max_vmdq_pools; 
	uint32_t rx_offload_capa; 
	uint32_t tx_offload_capa; 
	uint16_t reta_size;
	uint8_t hash_key_size; 
	uint64_t flow_type_rss_offloads;
	struct rte_eth_rxconf default_rxconf; 
	struct rte_eth_txconf default_txconf; 
	uint16_t vmdq_queue_base; 
	uint16_t vmdq_queue_num;  
	uint16_t vmdq_pool_base;  
	struct rte_eth_desc_lim rx_desc_lim;  
	struct rte_eth_desc_lim tx_desc_lim;  
	uint32_t speed_capa;  
	uint16_t nb_rx_queues; 
	uint16_t nb_tx_queues; 
};
struct rte_eth_dcb_tc_queue_mapping {
	struct {
		uint8_t base;
		uint8_t nb_queue;
	} tc_rxq[ETH_MAX_VMDQ_POOL][ETH_DCB_NUM_TCS];
	struct {
		uint8_t base;
		uint8_t nb_queue;
	} tc_txq[ETH_MAX_VMDQ_POOL][ETH_DCB_NUM_TCS];
};
struct rte_eth_dcb_info {
	uint8_t nb_tcs;        
	uint8_t prio_tc[ETH_DCB_NUM_USER_PRIORITIES]; 
	uint8_t tc_bws[ETH_DCB_NUM_TCS]; 
	struct rte_eth_dcb_tc_queue_mapping tc_queue;
};
struct rte_eth_dev;
typedef uint16_t (*eth_rx_burst_t)(void *rxq,
				   struct rte_mbuf **rx_pkts,
				   uint16_t nb_pkts);
typedef uint16_t (*eth_tx_burst_t)(void *txq,
				   struct rte_mbuf **tx_pkts,
				   uint16_t nb_pkts);
struct eth_dev_ops {
	eth_dev_configure_t        dev_configure; 
	eth_dev_start_t            dev_start;     
	eth_dev_stop_t             dev_stop;      
	eth_dev_set_link_up_t      dev_set_link_up;   
	eth_dev_set_link_down_t    dev_set_link_down; 
	eth_dev_close_t            dev_close;     
	eth_promiscuous_enable_t   promiscuous_enable; 
	eth_promiscuous_disable_t  promiscuous_disable;
	eth_allmulticast_enable_t  allmulticast_enable;
	eth_allmulticast_disable_t allmulticast_disable;
	eth_link_update_t          link_update;   
	eth_stats_get_t            stats_get;     
	eth_stats_reset_t          stats_reset;   
	eth_xstats_get_t           xstats_get;    
	eth_xstats_reset_t         xstats_reset;  
	eth_xstats_get_names_t     xstats_get_names;
	eth_queue_stats_mapping_set_t queue_stats_mapping_set;
	eth_dev_infos_get_t        dev_infos_get; 
	eth_dev_supported_ptypes_get_t dev_supported_ptypes_get;
	mtu_set_t                  mtu_set; 
	vlan_filter_set_t          vlan_filter_set;  
	vlan_tpid_set_t            vlan_tpid_set;      
	vlan_strip_queue_set_t     vlan_strip_queue_set; 
	vlan_offload_set_t         vlan_offload_set; 
	vlan_pvid_set_t            vlan_pvid_set; 
	eth_queue_start_t          rx_queue_start;
	eth_queue_stop_t           rx_queue_stop;
	eth_queue_start_t          tx_queue_start;
	eth_queue_stop_t           tx_queue_stop;
	eth_rx_queue_setup_t       rx_queue_setup;
	eth_queue_release_t        rx_queue_release;
	eth_rx_queue_count_t       rx_queue_count; 
	eth_rx_descriptor_done_t   rx_descriptor_done;  
	eth_rx_enable_intr_t       rx_queue_intr_enable;
	eth_rx_disable_intr_t      rx_queue_intr_disable;
	eth_tx_queue_setup_t       tx_queue_setup;
	eth_queue_release_t        tx_queue_release;
	eth_dev_led_on_t           dev_led_on;    
	eth_dev_led_off_t          dev_led_off;   
	flow_ctrl_get_t            flow_ctrl_get; 
	flow_ctrl_set_t            flow_ctrl_set; 
	priority_flow_ctrl_set_t   priority_flow_ctrl_set; 
	eth_mac_addr_remove_t      mac_addr_remove; 
	eth_mac_addr_add_t         mac_addr_add;  
	eth_mac_addr_set_t         mac_addr_set;  
	eth_uc_hash_table_set_t    uc_hash_table_set;  
	eth_uc_all_hash_table_set_t uc_all_hash_table_set;  
	eth_mirror_rule_set_t	   mirror_rule_set;  
	eth_mirror_rule_reset_t	   mirror_rule_reset;  
	eth_set_vf_rx_mode_t       set_vf_rx_mode;   
	eth_set_vf_rx_t            set_vf_rx;  
	eth_set_vf_tx_t            set_vf_tx;  
	eth_set_vf_vlan_filter_t   set_vf_vlan_filter;  
	eth_udp_tunnel_port_add_t udp_tunnel_port_add;
	eth_udp_tunnel_port_del_t udp_tunnel_port_del;
	eth_set_queue_rate_limit_t set_queue_rate_limit;   
	eth_set_vf_rate_limit_t    set_vf_rate_limit;   
	reta_update_t reta_update;
	reta_query_t reta_query;
	eth_get_reg_t get_reg;
	eth_get_eeprom_length_t get_eeprom_length;
	eth_get_eeprom_t get_eeprom;
	eth_set_eeprom_t set_eeprom;
#ifdef RTE_NIC_BYPASS
  bypass_init_t bypass_init;
  bypass_state_set_t bypass_state_set;
  bypass_state_show_t bypass_state_show;
  bypass_event_set_t bypass_event_set;
  bypass_event_show_t bypass_event_show;
  bypass_wd_timeout_set_t bypass_wd_timeout_set;
  bypass_wd_timeout_show_t bypass_wd_timeout_show;
  bypass_ver_show_t bypass_ver_show;
  bypass_wd_reset_t bypass_wd_reset;
#endif
	rss_hash_update_t rss_hash_update;
	rss_hash_conf_get_t rss_hash_conf_get;
	eth_filter_ctrl_t              filter_ctrl;
	eth_set_mc_addr_list_t set_mc_addr_list; 
	eth_rxq_info_get_t rxq_info_get;
	eth_txq_info_get_t txq_info_get;
	eth_timesync_enable_t timesync_enable;
	eth_timesync_disable_t timesync_disable;
	eth_timesync_read_rx_timestamp_t timesync_read_rx_timestamp;
	eth_timesync_read_tx_timestamp_t timesync_read_tx_timestamp;
	eth_get_dcb_info get_dcb_info;
	eth_timesync_adjust_time timesync_adjust_time;
	eth_timesync_read_time timesync_read_time;
	eth_timesync_write_time timesync_write_time;
	eth_l2_tunnel_eth_type_conf_t l2_tunnel_eth_type_conf;
	eth_l2_tunnel_offload_set_t l2_tunnel_offload_set;
};
struct rte_eth_rxtx_callback {
	struct rte_eth_rxtx_callback *next;
	union{
		rte_rx_callback_fn rx;
		rte_tx_callback_fn tx;
	} fn;
	void *param;
};
enum rte_eth_dev_type {
	RTE_ETH_DEV_UNKNOWN,	
	RTE_ETH_DEV_PCI,
	RTE_ETH_DEV_VIRTUAL,	
	RTE_ETH_DEV_MAX		
};
struct rte_eth_dev {
	eth_rx_burst_t rx_pkt_burst; 
	eth_tx_burst_t tx_pkt_burst; 
	struct rte_eth_dev_data *data;  
	const struct eth_driver *driver;
	const struct eth_dev_ops *dev_ops; 
	struct rte_pci_device *pci_dev; 
	struct rte_eth_dev_cb_list link_intr_cbs;
	struct rte_eth_rxtx_callback *post_rx_burst_cbs[RTE_MAX_QUEUES_PER_PORT];
	struct rte_eth_rxtx_callback *pre_tx_burst_cbs[RTE_MAX_QUEUES_PER_PORT];
	uint8_t attached; 
	enum rte_eth_dev_type dev_type; 
} __rte_cache_aligned;
struct rte_eth_dev_data {
	char name[RTE_ETH_NAME_MAX_LEN]; 
	void **rx_queues; 
	void **tx_queues; 
	uint16_t nb_rx_queues; 
	uint16_t nb_tx_queues; 
	struct rte_eth_dev_sriov sriov;    
	void *dev_private;              
	struct rte_eth_link dev_link;
	struct rte_eth_conf dev_conf;   
	uint16_t mtu;                   
	uint32_t min_rx_buf_size;
	uint64_t rx_mbuf_alloc_failed; 
	struct ether_addr* mac_addrs;
	uint64_t mac_pool_sel[ETH_NUM_RECEIVE_MAC_ADDR];
	struct ether_addr* hash_mac_addrs;
	uint8_t port_id;           
	__extension__
	uint8_t promiscuous   : 1, 
		scattered_rx : 1,  
		all_multicast : 1, 
		dev_started : 1,   
		lro         : 1;   
	uint8_t rx_queue_state[RTE_MAX_QUEUES_PER_PORT];
	uint8_t tx_queue_state[RTE_MAX_QUEUES_PER_PORT];
	uint32_t dev_flags; 
	enum rte_kernel_driver kdrv;    
	int numa_node;  
	const char *drv_name;   
};
uint8_t rte_eth_dev_count(void);
struct rte_eth_dev *rte_eth_dev_allocated(const char *name);
struct rte_eth_dev *rte_eth_dev_allocate(const char *name,
		enum rte_eth_dev_type type);
int rte_eth_dev_release_port(struct rte_eth_dev *eth_dev);
int rte_eth_dev_attach(const char *devargs, uint8_t *port_id);
int rte_eth_dev_detach(uint8_t port_id, char *devname);
struct eth_driver;
struct eth_driver {
	struct rte_pci_driver pci_drv;    
	eth_dev_init_t eth_dev_init;      
	eth_dev_uninit_t eth_dev_uninit;  
	unsigned int dev_private_size;    
};
int rte_eth_dev_configure(uint8_t port_id, uint16_t nb_rx_queue,
		uint16_t nb_tx_queue, const struct rte_eth_conf *eth_conf);
int rte_eth_dev_socket_id(uint8_t port_id);
int rte_eth_dev_is_valid_port(uint8_t port_id);
int rte_eth_dev_rx_queue_start(uint8_t port_id, uint16_t rx_queue_id);
int rte_eth_dev_rx_queue_stop(uint8_t port_id, uint16_t rx_queue_id);
int rte_eth_dev_tx_queue_start(uint8_t port_id, uint16_t tx_queue_id);
int rte_eth_dev_tx_queue_stop(uint8_t port_id, uint16_t tx_queue_id);
int rte_eth_dev_start(uint8_t port_id);
void rte_eth_dev_stop(uint8_t port_id);
int rte_eth_dev_set_link_up(uint8_t port_id);
int rte_eth_dev_set_link_down(uint8_t port_id);
void rte_eth_dev_close(uint8_t port_id);
int rte_eth_dev_set_tx_queue_stats_mapping(uint8_t port_id,
		uint16_t tx_queue_id, uint8_t stat_idx);
int rte_eth_dev_set_rx_queue_stats_mapping(uint8_t port_id,
					   uint16_t rx_queue_id,
					   uint8_t stat_idx);
void rte_eth_dev_info_get(uint8_t port_id, struct rte_eth_dev_info *dev_info);
int rte_eth_dev_get_supported_ptypes(uint8_t port_id, uint32_t ptype_mask,
				     uint32_t *ptypes, int num);
int rte_eth_dev_get_mtu(uint8_t port_id, uint16_t *mtu);
int rte_eth_dev_set_mtu(uint8_t port_id, uint16_t mtu);
int rte_eth_dev_vlan_filter(uint8_t port_id, uint16_t vlan_id, int on);
int rte_eth_dev_set_vlan_strip_on_queue(uint8_t port_id, uint16_t rx_queue_id,
		int on);
int rte_eth_dev_set_vlan_ether_type(uint8_t port_id,
				    enum rte_vlan_type vlan_type,
				    uint16_t tag_type);
int rte_eth_dev_set_vlan_offload(uint8_t port_id, int offload_mask);
int rte_eth_dev_get_vlan_offload(uint8_t port_id);
int rte_eth_dev_set_vlan_pvid(uint8_t port_id, uint16_t pvid, int on);
enum rte_eth_event_type {
	RTE_ETH_EVENT_UNKNOWN,  
	RTE_ETH_EVENT_INTR_LSC, 
	RTE_ETH_EVENT_QUEUE_STATE,
	RTE_ETH_EVENT_INTR_RESET,
	RTE_ETH_EVENT_MAX       
};
typedef void (*rte_eth_dev_cb_fn)(uint8_t port_id, \
		enum rte_eth_event_type event, void *cb_arg);
int rte_eth_dev_callback_register(uint8_t port_id,
			enum rte_eth_event_type event,
		rte_eth_dev_cb_fn cb_fn, void *cb_arg);
int rte_eth_dev_callback_unregister(uint8_t port_id,
			enum rte_eth_event_type event,
		rte_eth_dev_cb_fn cb_fn, void *cb_arg);
void _rte_eth_dev_callback_process(struct rte_eth_dev *dev,
				enum rte_eth_event_type event);
int rte_eth_dev_rx_intr_enable(uint8_t port_id, uint16_t queue_id);
int rte_eth_dev_rx_intr_disable(uint8_t port_id, uint16_t queue_id);
int rte_eth_dev_rx_intr_ctl(uint8_t port_id, int epfd, int op, void *data);
int rte_eth_dev_rx_intr_ctl_q(uint8_t port_id, uint16_t queue_id,
			      int epfd, int op, void *data);
int rte_eth_dev_flow_ctrl_get(uint8_t port_id,
			      struct rte_eth_fc_conf *fc_conf);
int rte_eth_dev_flow_ctrl_set(uint8_t port_id,
			      struct rte_eth_fc_conf *fc_conf);
int rte_eth_dev_priority_flow_ctrl_set(uint8_t port_id,
				struct rte_eth_pfc_conf *pfc_conf);
int rte_eth_dev_mac_addr_add(uint8_t port, struct ether_addr *mac_addr,
				uint32_t pool);
int rte_eth_dev_mac_addr_remove(uint8_t port, struct ether_addr *mac_addr);
int rte_eth_dev_default_mac_addr_set(uint8_t port, struct ether_addr *mac_addr);
int rte_eth_dev_rss_reta_update(uint8_t port,
				struct rte_eth_rss_reta_entry64 *reta_conf,
				uint16_t reta_size);
int rte_eth_dev_rss_reta_query(uint8_t port,
			       struct rte_eth_rss_reta_entry64 *reta_conf,
			       uint16_t reta_size);
int rte_eth_dev_uc_hash_table_set(uint8_t port,struct ether_addr *addr,
					uint8_t on);
int rte_eth_dev_uc_all_hash_table_set(uint8_t port,uint8_t on);
int rte_eth_dev_bypass_init(uint8_t port);
int rte_eth_dev_bypass_state_show(uint8_t port, uint32_t *state);
int rte_eth_dev_bypass_state_set(uint8_t port, uint32_t *new_state);
int rte_eth_dev_bypass_event_show(uint8_t port, uint32_t event, uint32_t *state);
int rte_eth_dev_bypass_event_store(uint8_t port, uint32_t event, uint32_t state);
int rte_eth_dev_wd_timeout_store(uint8_t port, uint32_t timeout);
int rte_eth_dev_bypass_ver_show(uint8_t port, uint32_t *ver);
int rte_eth_dev_bypass_wd_timeout_show(uint8_t port, uint32_t *wd_timeout);
int rte_eth_dev_bypass_wd_reset(uint8_t port);
int rte_eth_dev_rss_hash_update(uint8_t port_id,
				struct rte_eth_rss_conf *rss_conf);
int
rte_eth_dev_rss_hash_conf_get(uint8_t port_id,
			      struct rte_eth_rss_conf *rss_conf);
int
rte_eth_dev_udp_tunnel_port_add(uint8_t port_id,
				struct rte_eth_udp_tunnel *tunnel_udp);
int
rte_eth_dev_udp_tunnel_port_delete(uint8_t port_id,
				   struct rte_eth_udp_tunnel *tunnel_udp);
int rte_eth_dev_filter_supported(uint8_t port_id, enum rte_filter_type filter_type);
int rte_eth_dev_filter_ctrl(uint8_t port_id, enum rte_filter_type filter_type,
			enum rte_filter_op filter_op, void *arg);
int rte_eth_dev_get_dcb_info(uint8_t port_id,
			     struct rte_eth_dcb_info *dcb_info);
int rte_eth_dev_get_reg_info(uint8_t port_id, struct rte_dev_reg_info *info);
int rte_eth_dev_get_eeprom_length(uint8_t port_id);
int rte_eth_dev_get_eeprom(uint8_t port_id, struct rte_dev_eeprom_info *info);
int rte_eth_dev_set_eeprom(uint8_t port_id, struct rte_dev_eeprom_info *info);
int rte_eth_dev_set_mc_addr_list(uint8_t port_id,
				 struct ether_addr *mc_addr_set,
				 uint32_t nb_mc_addr);
int
rte_eth_dev_l2_tunnel_eth_type_conf(uint8_t port_id,
				    struct rte_eth_l2_tunnel_conf *l2_tunnel);
int
rte_eth_dev_l2_tunnel_offload_set(uint8_t port_id,
				  struct rte_eth_l2_tunnel_conf *l2_tunnel,
				  uint32_t mask,
				  uint8_t en);
int
rte_eth_dev_get_port_by_name(const char *name, uint8_t *port_id);
int
rte_eth_dev_get_name_by_port(uint8_t port_id, char *name);